# Custom-SDL-Menu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
custom-sdl-menu/: Button.cpp  Button.h  CMakeLists.txt  Logger.cpp  Logger.h  Menu.cpp  Menu.h  MySDL.cpp  MySDL.h  ScreenSize.cpp  ScreenSize.h  constants.h  main.cpp
resources/json/: menu.json
